Fixed gap.

--- a/IntranetCSS/component.css
+++ b/IntranetCSS/component.css
@@ -2,11 +2,11 @@
 .ui-dark .bg-smoke { background-color: #282828; }
 
 .panel { background-color: #FFF; border-radius: var(--radius); border: 1px solid #E0E0E0; }
-.panel > .toolbar { float: right; margin: 10px var(--gap) 0 10px; }
+.panel > .toolbar { float: right; margin: 10px 10px 0 10px; }
 .panel > .toolbar button { height: 22px; line-height: 20px; min-width: 60px; }
-.panel > label { display: block; padding: 10px var(--gap); border-bottom: 1px solid #E0E0E0; font-size: 15px; color: #000; font-weight: bold; border-radius: var(--radius) var(--radius) 0 0; }
+.panel > label { display: block; padding: 10px 10px; border-bottom: 1px solid #E0E0E0; font-size: 15px; color: #000; font-weight: bold; border-radius: var(--radius) var(--radius) 0 0; }
 .panel > label i { margin-right: 7px; }
-.panel .padding { padding: 15px var(--gap); }
+.panel .padding { padding: 15px 10px; }
 .ui-dark .panel { background-color: #202020; border-color: #404040; }
 .ui-dark .panel > label { border-bottom-color: #404040; color: #FFF; }
 
